Signed-off-by: Steven <steven_chen@thedspway.com>

--- a/index.html
+++ b/index.html
@@ -2,21 +2,33 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
-<link rel="stylesheet" type="text/css" href="src/app.css"/>
+<title>Grace</title>
+<link rel="stylesheet" type="text/css" href="exp/css/w.css"/>
 </head>
 <body>
-<div class="body">
-	<div class="add" data-node="say/add">
-		<input type="text" />
-		<button>SAY</button>
-	</div>
-	<ul class="list" data-node="say/list">
-		<li data-node="say/item#2"> <span>text</span> <a href="#">&times;</a> </li>
-		<li data-node="say/item#3"> <span>text</span> <a href="#">&times;</a> </li>
-	</ul>
-	<a href="#" class="clear" data-node="say/clear">Clear</a>
-</div>
 </body>
 </html>
-<script data-main="app/app" src="src/require.js"></script>
+<script type="text/javascript" src="../libs/jquery-2.0.0.min.js"></script>
+<script type="text/javascript" src="exp/g/grace.config.js"></script>
+<script type="text/javascript" src="exp/g/grace.chips.js"></script>
+<script type="text/javascript" src="exp/g/grace.mediator.js"></script>
+<script type="text/javascript" src="exp/g/grace.core.js"></script>
+<script type="text/javascript" src="exp/g/grace.widgets.js"></script>
+<script type="text/javascript">
+	G.DS('d',{this:{aaaa:1},public:{b:2}});
+	G.Init('d',{I:function(){alert(this.aaaa)}});
+	G.Widget('d',
+	{this:{a:0}},
+	{
+		inited:function(){},
+		'd/alert':function(){alert('init')},
+		preinit:function(){alert('init')},
+		
+	},{
+		subs:function(){alert('subs')}
+	},{
+		func:function(){alert('func')}
+	});
+	G.Widgets.Init('d');
+	
+</script>
