--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 <body>
 </body>
 </html>
-<script type="text/javascript" src="../libs/jquery-2.0.0.min.js"></script>
-<script type="text/javascript" src="exp/g/grace.config.js"></script>
-<script type="text/javascript" src="exp/g/grace.chips.js"></script>
-<script type="text/javascript" src="exp/g/grace.mediator.js"></script>
-<script type="text/javascript" src="exp/g/grace.core.js"></script>
-<script type="text/javascript" src="exp/g/grace.widgets.js"></script>
+<script type="text/javascript" src="grace.config.js"></script>
+<script type="text/javascript" src="grace.chips.js"></script>
+<script type="text/javascript" src="grace.mediator.js"></script>
+<script type="text/javascript" src="grace.core.js"></script>
+<script type="text/javascript" src="grace.widgets.js"></script>
 <script type="text/javascript">
 	G.DS('d',{this:{aaaa:1},public:{b:2}});
 	G.Init('d',{I:function(){alert(this.aaaa)}});
