Signed-off-by: Steven <steven_chen@thedspway.com>

--- a/demo/libs/g/test.html
+++ b/demo/libs/g/test.html
@@ -2,11 +2,21 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Grace</title>
-<link rel="stylesheet" type="text/css" href="exp/css/w.css"/>
+<title>无标题文档</title>
 </head>
+
 <body>
-</body>    
+<script>
+function G(){}
+G.prototype={
+	constructor:G,
+	a:function(){this.B="BBBB"},
+	b:function(){alert(this.B)},
+}
+var g=new G();
+g.a();
+g.b();
+
+</script>
+</body>
 </html>
-<script type="text/javascript" src="libs/g/compose.js"></script>
-<script type="text/javascript" src="libs/g/g.js"></script>
