--- a/demo/libs/debug/demo.html
+++ b/demo/libs/debug/demo.html
@@ -2,11 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Grace</title>
-<link rel="stylesheet" type="text/css" href="exp/css/w.css"/>
+<script type="text/javascript" src="debug.js"></script>
+<link rel="stylesheet" type="text/css" href="debug.css"/>
+<title>无标题文档</title>
 </head>
 <body>
-</body>    
+
+
+
+
+</body>
 </html>
-<script type="text/javascript" src="libs/g/compose.js"></script>
-<script type="text/javascript" src="libs/g/g.js"></script>
