进一步划分模块

--- a/demo/libs/g/demo.html
+++ b/demo/libs/g/demo.html
@@ -7,10 +7,14 @@
 <script type="text/javascript" src="grace.dataset.js"></script>
 <script type="text/javascript" src="grace.mediator.js"></script>
 <script type="text/javascript" src="grace.core.js"></script>
+<script type="text/javascript" src="grace.widget.js"></script>
+<script type="text/javascript" src="grace.page.js"></script>
+<script type="text/javascript" src="grace.util.js"></script>
+<script type="text/javascript" src="grace.$.js"></script>
 <script type="text/javascript" src="../../utils/$.js"></script>
 <script type="text/javascript" src="../../utils/chzn.js"></script>
 <script type="text/javascript" src="demo.js"></script>
-<title>无标题文档</title>
+<title>GraceJS</title>
 </head>
 
 <body>
