Signed-off-by: Steven <steven_chen@thedspway.com>

--- a/demo/libs/g/demo.html
+++ b/demo/libs/g/demo.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="grace.dataset.js"></script>
 <script type="text/javascript" src="grace.mediator.js"></script>
 <script type="text/javascript" src="grace.core.js"></script>
-<script type="text/javascript" src="grace.$.js"></script>
+<script type="text/javascript" src="grace.engine.js"></script>
 <script type="text/javascript" src="grace.widget.js"></script>
 <script type="text/javascript" src="grace.page.js"></script>
 
