Signed-off-by: Steven <steven_chen@thedspway.com>

--- a/demo/libs/g/demo.html
+++ b/demo/libs/g/demo.html
@@ -6,11 +6,11 @@
 <script type="text/javascript" src="../jquery-2.0.0.min.js"></script>
 <script type="text/javascript" src="grace.dataset.js"></script>
 <script type="text/javascript" src="grace.mediator.js"></script>
+<script type="text/javascript" src="grace.router.js"></script>
 <script type="text/javascript" src="grace.core.js"></script>
 <script type="text/javascript" src="grace.engine.js"></script>
 <script type="text/javascript" src="grace.widget.js"></script>
 <script type="text/javascript" src="grace.page.js"></script>
-
 <script type="text/javascript" src="grace.util.js"></script>
 
 <script type="text/javascript" src="../../utils/$.js"></script>
@@ -20,6 +20,11 @@
 </head>
 
 <body>
+
+<a href="#">#</a>
+<a href="#view">view</a>
+
+<a href="#edit">edit</a>
 </body>
 </html>
 <script>
