Signed-off-by: Steven <steven_chen@thedspway.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,11 +2,32 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Grace</title>
-<link rel="stylesheet" type="text/css" href="exp/css/w.css"/>
+<script type="text/javascript" src="../source/compose.js"></script>
+<script type="text/javascript" src="libs/jquery-2.0.0.min.js"></script>
+<script type="text/javascript" src="../source/grace.dataset.js"></script>
+<script type="text/javascript" src="../source/grace.mediator.js"></script>
+<script type="text/javascript" src="../source/grace.router.js"></script>
+<script type="text/javascript" src="../source/grace.core.js"></script>
+<script type="text/javascript" src="../source/grace.engine.js"></script>
+<script type="text/javascript" src="../source/grace.widget.js"></script>
+<script type="text/javascript" src="../source/grace.page.js"></script>
+<script type="text/javascript" src="../source/grace.util.js"></script>
+
+<script type="text/javascript" src="../demo/utils/$.js"></script>
+<script type="text/javascript" src="../demo/utils/chzn.js"></script>
+<script type="text/javascript" src="../demo/demo.js"></script>
+<title>GraceJS</title>
 </head>
+
 <body>
-</body>    
+
+<a href="#">#</a>
+<a href="#view">view</a>
+<a href="#edit">edit</a>
+
+</body>
 </html>
-<script type="text/javascript" src="libs/g/compose.js"></script>
-<script type="text/javascript" src="libs/g/g.js"></script>
+<script>
+
+
+</script>
