Signed-off-by: Steven <steven_chen@thedspway.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,8 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="../source/debug/debug.css" />
 <script type="text/javascript" src="../source/compose.js"></script>
 <script type="text/javascript" src="libs/jquery-2.0.0.min.js"></script>
+
+
+<script type="text/javascript" src="../source/debug/debug.js"></script>
 <script type="text/javascript" src="../source/grace.dataset.js"></script>
 <script type="text/javascript" src="../source/grace.mediator.js"></script>
 <script type="text/javascript" src="../source/grace.router.js"></script>
@@ -12,13 +16,17 @@
 <script type="text/javascript" src="../source/grace.widget.js"></script>
 <script type="text/javascript" src="../source/grace.page.js"></script>
 <script type="text/javascript" src="../source/grace.util.js"></script>
+<script type="text/javascript" src="../source/grace.app.js"></script>
 
-<script type="text/javascript" src="../demo/utils/$.js"></script>
-<script type="text/javascript" src="../demo/utils/chzn.js"></script>
-<script type="text/javascript" src="../demo/demo.js"></script>
+
+<script type="text/javascript" src="utils/$.js"></script>
+<script type="text/javascript" src="utils/chzn.js"></script>
+<script type="text/javascript" src="widgets/w.js"></script>
+<script type="text/javascript" src="page/p.js"></script>
+<script type="text/javascript" src="app.js"></script>
+
 <title>GraceJS</title>
 </head>
-
 <body>
 
 <a href="#">#</a>
