Signed-off-by: Steven <steven_chen@thedspway.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -17,9 +17,9 @@
 <script type="text/javascript" src="../source/grace.page.js"></script>
 <script type="text/javascript" src="../source/grace.util.js"></script>
 <script type="text/javascript" src="../source/grace.app.js"></script>
+<script type="text/javascript" src="../source/plugins/$.js"></script>
 
 
-<script type="text/javascript" src="utils/$.js"></script>
 <script type="text/javascript" src="utils/chzn.js"></script>
 <script type="text/javascript" src="widgets/w.js"></script>
 <script type="text/javascript" src="page/p.js"></script>
