--- a/demo/index.html
+++ b/demo/index.html
@@ -2,28 +2,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="stylesheet" type="text/css" href="../source/debug/debug.css" />
-<script type="text/javascript" src="../source/compose.js"></script>
-<script type="text/javascript" src="libs/jquery-2.0.0.min.js"></script>
-
-
-<script type="text/javascript" src="../source/debug/debug.js"></script>
-<script type="text/javascript" src="../source/grace.dataset.js"></script>
-<script type="text/javascript" src="../source/grace.mediator.js"></script>
-<script type="text/javascript" src="../source/grace.router.js"></script>
-<script type="text/javascript" src="../source/grace.core.js"></script>
-<script type="text/javascript" src="../source/grace.engine.js"></script>
-<script type="text/javascript" src="../source/grace.widget.js"></script>
-<script type="text/javascript" src="../source/grace.page.js"></script>
-<script type="text/javascript" src="../source/grace.util.js"></script>
-<script type="text/javascript" src="../source/grace.app.js"></script>
-<script type="text/javascript" src="../source/plugins/$.js"></script>
-
-
-<script type="text/javascript" src="utils/chzn.js"></script>
-<script type="text/javascript" src="widgets/w.js"></script>
-<script type="text/javascript" src="page/p.js"></script>
-<script type="text/javascript" src="app.js"></script>
 
 <title>GraceJS</title>
 </head>
@@ -35,7 +13,5 @@
 
 </body>
 </html>
-<script>
-
-
-</script>
+<script type="text/javascript" src="config.js"></script>
+<script type="text/javascript" data-main="app" src="libs/require.js"></script>
