--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>无标题文档</title>
-<script type="text/javascript" src="old/jquery-2.0.0.min.js"></script>
-<script type="text/javascript" src="demo/utils/$.js"></script>
-<script type="text/javascript" src="demo/utils/chzn.js"></script>
+
 </head>
 <body>
 
@@ -19,6 +17,11 @@
 </html>
 
 <script type="text/javascript">
-var g=G.$('#inp');
-g.chznSet('chznSeted!!!!!!');
+function U(){
+	if(!G)
+		G=1;
+	else console.log(G++);
+}
+U();U();U();U();
+
 </script>
