Signed-off-by: Steven <steven_chen@thedspway.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -14,4 +14,4 @@
 </body>
 </html>
 <script type="text/javascript" src="config.js"></script>
-<script type="text/javascript" data-main="app" src="libs/require.js"></script>
+<script type="text/javascript" data-main="demo" src="libs/require.js"></script>
