Signed-off-by: Steven <steven_chen@thedspway.com>

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 
 <script type="text/javascript">
 
+var a=[1,2];
+var b=[3,4];
+a.concat(b);
+alert(a);
+
+
+/*
 function inherit(cons,proto,base){//单继承
 		for(var x in base.prototype)Constructor.prototype[x]=base.prototype[x];
 		for(var x in cons.prototype)Constructor.prototype[x]=cons.prototype[x];
@@ -67,5 +74,5 @@ function B(){}
 B.prototype.bbb=888;
 var N = inherit(B,{alert:function(){alert(this.a);}},A);
 var n=new N();
-alert(0)
+alert(0)*/
 </script>
