Signed-off-by: Steven <steven_chen@thedspway.com>

--- a/demo/BL.html
+++ b/demo/BL.html
@@ -6,11 +6,11 @@
 <title>GraceJS</title>
 </head>
 <body>
-
+<div>
 <a href="#">#</a>
-<a href="#view">view</a>
+<a href="#view" data-util="chzn">view</a>
 <a href="#edit">edit</a>
-
+</div>
 </body>
 </html>
 <script type="text/javascript" src="config.js"></script>
