Signed-off-by: Steven <steven_chen@thedspway.com>

--- a/demo2/index.html
+++ b/demo2/index.html
@@ -8,9 +8,8 @@
 <body>
 
 <a href="#">#</a>
-<a href="#view">view</a>
-<a href="#edit">edit</a>
 
+<div id="aaa">sdfsdfsdfsdsdfsdf</div>
 </body>
 </html>
 <script type="text/javascript" src="config.js"></script>
