--- a/src/untitled.html
+++ b/src/untitled.html
@@ -16,9 +16,11 @@
 <div style="border: 1px solid black; width: 500px; margin: 10px 0; color: white">  
     <div id="time-progress" style="background-color: navy; height: 16px; width: 0"></div>  
 </div>  
-  
+  <style type="text/css">
+  .class{color:#ccc;}
+  </style>
 <table id="demo">  
-    <col width="200" />  
+    <col width="200" style="" />  
     <col width="300" />  
     <tbody>  
     <tr>  
