Signed-off-by: stevenCJC <522702986@qq.com>

--- a/testOOP/index.html
+++ b/testOOP/index.html
@@ -1,38 +1,48 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<title></title>
+    <title></title>
 </head>
 <body>
+    <ul id="id">
+        <li>
+            <a href="">
+                <span></span>
+                <i class="tool-bs"></i>
+                <u class="tool-delete"></u>
+            </a>
+        </li>
+    </ul>
+    <a href="#">#</a>
+    <span>
+        <ul id="ido">
+            <li class="sdfsdf" style="color:black; color"><a href=""><span></span></a></li>
+            <li class="sdfsdf"><a href=""><span></span></a></li>
+            <li class="sdfsdf"><a href=""><span></span></a></li>
+            <li class="sdfsdf"><a href=""><span></span></a></li>
+            <li class="sdfsdf"><a href=""><span></span></a></li>
+        </ul>
+    </span>
 
-<a href="#">#</a>
-<span><ul id="ido">
-	<li class="sdfsdf"><a href=""><span></span></a></li>
-	<li class="sdfsdf"><a href=""><span></span></a></li>
-	<li class="sdfsdf"><a href=""><span></span></a></li>
-	<li class="sdfsdf"><a href=""><span></span></a></li>
-	<li class="sdfsdf"><a href=""><span></span></a></li>
-</ul></span>
-
-<div id="page">
-	<div id="header">
-		<ul id="nav">
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-		</ul>
-	</div>
-	<div id="page">
-		<h1><span></span></h1>
-		<p></p>
-		<p></p>
-	</div>
-	<div id="footer"></div>
-</div>
-<div id="aaa">sdfsdfsdfsdsdfsdf</div>
+    <div id="page">
+        <div id="header">
+            <ul id="nav">
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>
+        </div>
+        <div id="page">
+            <h1><span></span></h1>
+            <p></p>
+            <p></p>
+        </div>
+        <div id="footer"></div>
+    </div>
+    <div id="aaa">sdfsdfsdfsdsdfsdf</div>
 </body>
 </html>
 <script type="text/javascript" src="config.js"></script>
