Signed-off-by: stevenCJC <522702986@qq.com>

--- a/Gracejs 3.0/oop/test/class.html
+++ b/Gracejs 3.0/oop/test/class.html
@@ -8,13 +8,13 @@
 <body>
 </body>
 </html>
-<script type="text/javascript" src="jquery.js"></script>
-<script type="text/javascript" src="class.js"></script>
-<script type="text/javascript" src="aspect.js"></script>
-<script type="text/javascript" src="events.js"></script>
-<script type="text/javascript" src="attribute.js"></script>
-<script type="text/javascript" src="base.js"></script>
-<script type="text/javascript" src="widget.js"></script>
+<script type="text/javascript" src="../aralejs/jquery.js"></script>
+<script type="text/javascript" src="../aralejs/class.js"></script>
+<script type="text/javascript" src="../aralejs/aspect.js"></script>
+<script type="text/javascript" src="../aralejs/events.js"></script>
+<script type="text/javascript" src="../aralejs/attribute.js"></script>
+<script type="text/javascript" src="../aralejs/base.js"></script>
+<script type="text/javascript" src="../aralejs/widget.js"></script>
 <script>
 	
 	var A=function AA(){this.a='a';};
