Signed-off-by: stevenCJC <522702986@qq.com>

--- a/test 3.0/oop/class_.html
+++ b/test 3.0/oop/class_.html
@@ -9,4 +9,22 @@
 </html>
 <script type="text/javascript" src="../config.js"></script>
 <script type="text/javascript" data-main="../test 3.0/oop/class" src="../require.js"></script>
+<script id="scr"></script>
+<script>
+var aaaaa,aa,aaa;
+console.time('eval');
+for(var i=0;i<1000;i++)
+	eval('aaaaa=function A(){this.a=0;this.sdfsdfsdfsdfsdf=999999;var sss="口水发电好久开始大家反馈数据的开发还是看几点发货水电费烧烤聚会发到手机客户端方开具沙发垫会计师对减肥开始大家看好时间快点恢复时间快点好疯狂就收费的会计师的疯狂水电费快速电话费电风扇绝对会分手快接电话反馈技术奋斗开始好地方就开始很多开发建设的开发计划数据的开发和深刻觉得很疯狂就是电风扇对方说的话送快递费很快就收到后付款都是和水电费水电费看书的罚款还上课点击返回数据点发货时看见对方水电费时段反馈数据的恢复快解释道腐化恐惧收到回复就开始非水电费和可是对方看水电费和谁开的房间合适的九分裤和水电费时间点发货快睡觉都会放款时间到合肥科技沙发垫";}');
+console.timeEnd('eval');
+console.time('script');
+for(var i=0;i<1000;i++)
+	document.getElementById('scr').innerHTML='aa=function '+aaaaa.name+'(){this.a=0;this.sdfsdfsdfsdfsdf=999999;var sss=A;}';	
+console.timeEnd('script');
+console.log(aa);
+console.time('new Function');
+for(var i=0;i<1000;i++)
+	aaa=new Function('function AAA(){this.a=0;this.sdfsdfsdfsdfsdf=999999;var sss="口水发电好久开始大家反馈数据的开发还是看几点发货水电费烧烤聚会发到手机客户端方开具沙发垫会计师对减肥开始大家看好时间快点恢复时间快点好疯狂就收费的会计师的疯狂水电费快速电话费电风扇绝对会分手快接电话反馈技术奋斗开始好地方就开始很多开发建设的开发计划数据的开发和深刻觉得很疯狂就是电风扇对方说的话送快递费很快就收到后付款都是和水电费水电费看书的罚款还上课点击返回数据点发货时看见对方水电费时段反馈数据的恢复快解释道腐化恐惧收到回复就开始非水电费和可是对方看水电费和谁开的房间合适的九分裤和水电费时间点发货快睡觉都会放款时间到合肥科技沙发垫";}');	
+console.timeEnd('new Function');
 
+console.log(aaa);
+</script>
