Signed-off-by: stevenCJC <522702986@qq.com>

--- a/test 3.0/oop/event_.html
+++ b/test 3.0/oop/event_.html
@@ -2,13 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>widget</title>
 </head>
     
 <body>
-<%=miao%>
 </body>
 </html>
 <script type="text/javascript" src="../config.js"></script>
-<script type="text/javascript" data-main="../test 3.0/mvx/widget" src="../require.js"></script>
+<script type="text/javascript" data-main="../test 3.0/oop/event" src="../require.js"></script>
 
